--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@ title: Home
 <body class="landing">
 	<div class="sidebar-about">
 	  <h1>{{ site.title }}</h1>
-	  <img class="image-rounded" src="/public/revan.png">
+	  <img class="image-rounded" src="/public/bowen.jpg">
 	</div>
 
 	<div>
 	<p>
-	I'm Revan, a SETI at Google on Firebase Engineering Productivity.
-	</p>
-	<p>
-	I graduated from Rutgers University in 2016, where I studied Electrical/Computer Engineering and Computer Science.
+	I'm Bowen Xiao, a Undergraduate student at CUHKSZ Computer Science Department(2021').
 	</p>
 	<p>
 	As a student I <a href="/work">worked places</a> and <a href="/research">did some research stuff</a>.
@@ -27,7 +24,7 @@ title: Home
 	</p>
 
 	<p>
-	Check me out on <a href="https://github.com/revan">GitHub</a>
+	Check me out on <a href="https://github.com/bowenxiaoCUHKSZ">GitHub</a>
 	or have a look at my <a href="{{ site.resume }}">resume</a>.
 	Email in the resume!
 	</p>
