--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 
 <body class="landing">
 	<div class="sidebar-about">
-	  <h1>{{ site.title }}</h1>
+	  <h1>Bowen Xiao</h1>
 	  <img class="image-rounded" src="/public/bowen.jpg">
 	</div>
 
