--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Home
 
 	<p>
 	Check me out on <a href="https://github.com/bowenxiaoCUHKSZ">GitHub</a>
-	or have a look at my <a href=''>resume</a>.
+	or have a look at my <a href='https://cuhko365-my.sharepoint.com/:b:/g/personal/117010300_link_cuhk_edu_cn/EQHxf-LKVzlHmrOJGxRbmckBML_F90kDu63jCm39phs8Iw?e=s2z7Q7'>resume</a>.
 	Email in the resume!
 	</p>
 	</div>
