--- a/research/index.html
+++ b/research/index.html
@@ -4,7 +4,7 @@ title: Research
 ---
 <link rel="stylesheet" href="/public/css/projects.css">
 
-<p>Here's the longer term projects I've worked on, with an academic flavor.</p>
+<p>Here's the longer term projects I've worked on, with an academic flavor?</p>
 
 {% for project in site.data.research %}
 	<div class="box css3-shadow">
