--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Home
 
 	<p>
 	Check me out on <a href="https://github.com/bowenxiaoCUHKSZ">GitHub</a>
-	or have a look at my <a href='https://github.com/bowenxiaoCUHKSZ/bowenxiaoCUHKSZ.github.io/blob/master/Resume_Papers2.pdf'>resume</a>.
+	or have a look at my <a href='./Resume_Papers2.pdf'>resume</a>.
 	Email in the resume!
 	</p>
 	</div>
