--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@ title: Home
 	</p>
 	<p>
 	As a student I <a href="/work">worked places</a> and <a href="/research">did some research stuff</a>.
+	Here is my <a href="/projects">selected projects</a>.
 	</p>
 
-	<p>
+	<!-- <p>
 	I like <a href="/projects">building things</a> at hackathons.
 	Sometimes, <a href="/blog">I write words</a> for fun, too.
-	</p>
+	</p> -->
 
 	<p>
 	Check me out on <a href="https://github.com/bowenxiaoCUHKSZ">GitHub</a>
 	or have a look at my <a href='pdf/Resume_Papers2.pdf' type="application/pdf">resume</a>.
-	Email in the resume!
 	</p>
 	</div>
 
