--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Home
 
 	<p>
 	Check me out on <a href="https://github.com/bowenxiaoCUHKSZ">GitHub</a>
-	or have a look at my <a href='pdf/Resume.pdf' type="application/pdf">resume</a>.
+	or have a look at my <a href='pdf/Resume_Bowen.pdf' type="application/pdf">resume</a>.
 	</p>
 	</div>
 
