--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Home
 	</p> -->
 
 	<p>
-	Check me out on <a href="https://github.com/bowenxiaoCUHKSZ">GitHub</a>
+	Check me out on <a href="https://github.com/BowenXiao1999">GitHub</a>
 	or have a look at my <a href='pdf/Resume_Bowen.pdf' type="application/pdf">resume</a>.
 	</p>
 	</div>
